added meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- generated meta tags -->
+  <meta name="title" content="Portfolio of MD Sultan Mahmud Safoun">
+  <meta name="description" content="Just the portfolio, nothing else. ">
+  <meta name="keywords" content="portfolio, developer, software, sultan, mahmud, safoun">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="1 days">
+  <meta name="author" content="MD Sultan Mahmud Safoun">
+  <!-- generated meta tags -->
   <title>Safoun's Portfolio</title>
 </head>
 
